reworked to meet solarqube standarts